--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@ It is available on [GitHub](https://github.com/codeassign/markjax).
       function render() {
         var textarea = document.getElementById("input");
         var preview = document.getElementById("output");
-        markjax(textarea.value, function(resultHTML) {
-          preview.innerHTML = resultHTML;
-        });
+        preview.innerHTML = markjax(textarea.value);
       }
 
       render()
