--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <title>MarkJax</title>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js'></script>
-    <script type="text/javascript" src='js/markjax.js'></script>
-
+    <script type="text/javascript" src='dist/markjax.min.js'></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
 
     <style>
