Load MathJax config dynamically

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@ It is available on [GitHub](https://github.com/codeassign/markjax).
         var preview = document.getElementById("output");
         markjax(textarea.value, preview);
       }
-
-      render()
+      render();
     </script>
   </body>
 </html>
