Using MathJax when KaTeX fails

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
       <textarea class="col-xs-12 col-sm-6 col-md-6 col-lg-6" id="input" onkeyup="render()">
 # MarkJax
 
-Markdown + LaTeX parser made by [CodeAssign](https://codeassign.com).
+Markdown + $\LaTeX$ parser made by [CodeAssign](https://codeassign.com).
 
-It converts Markdown + LaTeX text, such as this one, and produces HTML.
+It converts Markdown + $\LaTeX$ text, such as this one, and produces HTML.
 
-It uses [marked](https://github.com/chjj/marked) as Markdown parser and [katex](https://khan.github.io/KaTeX/) as LaTeX parser.
+It uses [marked](https://github.com/chjj/marked) as Markdown parser and [katex](https://khan.github.io/KaTeX/) 
+and [MathJax](https://www.mathjax.org/) as $\LaTeX$ parsers.
 
 It is available on [GitHub](https://github.com/codeassign/markjax).
 
@@ -41,7 +42,7 @@ $$ f(x) = \int_{-\infty}^\infty\hat f(\xi)\,e^{2 \pi i \xi x}\,d\xi $$
       function render() {
         var textarea = document.getElementById("input");
         var preview = document.getElementById("output");
-        preview.innerHTML = markjax(textarea.value);
+        markjax(textarea.value, preview);
       }
       render();
     </script>
